fixed spacing issue on posts

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,4 +18,5 @@
 .card {
   padding: 1rem;
   background: lightcyan;
+  margin-bottom: 1rem;
 }
